# Duplicates

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  cleanuputils.7  config.h  config.h.in  config.status  configure  configure.ac  duplicates.1  duplicates.c  excludes.conf  fileops.c  fileops.h  fileutil.c  fileutil.h  firstrun.c  firstrun.h  md5.c  processdups.1  processdups.c
.deps/: duplicates.Po  fileutil.Po  md5.Po
